{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 69,
  "lineage": "bcb61a80-c506-aa22-9684-6dcdff1daefe",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:554660509057:vpc/vpc-07e3b3af9b264e7ad",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0f2466704f762452e",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              },
              {
                "association_id": "vpc-cidr-assoc-055026cc24778909d",
                "cidr_block": "86.10.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-2f524347",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-07e3b3af9b264e7ad",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0be6f9495df92d100",
            "owner_id": "554660509057",
            "tags": {
              "Name": "default"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "deep",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:554660509057:loadbalancer/net/deep/0527830ad1b915cb",
            "arn_suffix": "net/deep/0527830ad1b915cb",
            "dns_name": "deep-0527830ad1b915cb.elb.us-east-2.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:554660509057:loadbalancer/net/deep/0527830ad1b915cb",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "deep",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-006c5885815113eaf"
              },
              {
                "subnet_id": "subnet-0667b707728dee814"
              },
              {
                "subnet_id": "subnet-084a815ef77cd570f"
              }
            ],
            "subnets": [
              "subnet-006c5885815113eaf",
              "subnet-0667b707728dee814",
              "subnet-084a815ef77cd570f"
            ],
            "tags": {
              "Name": "deep"
            },
            "tags_all": {
              "Name": "deep"
            },
            "vpc_id": "vpc-07e3b3af9b264e7ad",
            "zone_id": "ZLMOA37VPKANP"
          },
          "dependencies": [
            "data.aws_subnets.public_subnets",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener_4000",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:554660509057:listener/net/deep/0527830ad1b915cb/872e432b97191be5",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:554660509057:targetgroup/deep-4000/dc8281f1cf0a94c1",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:554660509057:listener/net/deep/0527830ad1b915cb/872e432b97191be5",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:554660509057:loadbalancer/net/deep/0527830ad1b915cb",
            "port": 4000,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.deep",
            "aws_lb_target_group.tg_4000",
            "data.aws_subnets.public_subnets",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg_4000",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:554660509057:targetgroup/deep-4000/dc8281f1cf0a94c1",
            "arn_suffix": "targetgroup/deep-4000/dc8281f1cf0a94c1",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:554660509057:targetgroup/deep-4000/dc8281f1cf0a94c1",
            "lambda_multi_value_headers_enabled": false,
            "name": "deep-4000",
            "port": 4000,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "Name": "deep"
            },
            "tags_all": {
              "Name": "deep"
            },
            "target_type": "instance",
            "vpc_id": "vpc-07e3b3af9b264e7ad"
          },
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aws_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:554660509057:security-group/sg-0f59188cd0c80c77c",
            "description": "Security group for VPC named deep managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All Open",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f59188cd0c80c77c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 4000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 4000
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 5432
              }
            ],
            "name": "deep",
            "name_prefix": "",
            "owner_id": "554660509057",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "deep"
            },
            "tags_all": {
              "Name": "deep"
            },
            "timeouts": null,
            "vpc_id": "vpc-07e3b3af9b264e7ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}